# automotive-message-broker

examples/: dbusconfig
plugins/dbus/amb-qt/: CMakeLists.txt  ambabstractproperty.cpp  ambabstractproperty.h  ambqt.cpp  ambqt.h  ambqtquick.cpp  ambqtquick.h  ambvehiclespeed.cpp  ambvehiclespeed.h  ambzone.h  qmldir  test.cpp
